# bytes-format

./: Cargo.toml  README.md
src/: de.rs  lib.rs  ser.rs  value_type.rs
