[package]
name = "serde-example"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "An example Serializer and Deserializer data format for Serde"
documentation = "https://serde.rs/data-format.html"
keywords = ["serde"]
categories = ["encoding"]
edition = "2018"
publish = false

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
serde_bytes = "0.11.5"